<resources>
    <string name="app_name">Cesta</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="log_in">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="frag_list">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </array>

    <string name="drawer_open">Drawer open.</string>
    <string name="drawer_close">Drawer close.</string>
    <color name="white">#FFFFFF</color>
    <color name="orange">#FF6F00</color>
    <string name="facebook_app_id">190240024656344</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_sign">GoogleSignActivity</string>

    <string-array name="seats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="text_register">Register</string>
    <string name="different_login">OR</string>
    <string name="pro_pic_st">Profile picture.</string>
</resources>
