<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".SignUpActivity"
                android:layout_margin="2dp"
                android:baselineAligned="false">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:clipToPadding="true"
        android:padding="4dp"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/material_orange_500"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45dp"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txt_descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Your travel companion"
                    android:textColor="@color/grey_600"
                    android:layout_below="@+id/txt_logo"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="2dp"
                android:layout_gravity="bottom"
                android:weightSum="1"
                android:layout_weight="9">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                    <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="Confirm Password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />


                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:textColor="@color/grey_0"
                    android:background="@drawable/login_btn"
                    android:text="@string/text_register"
                    style="?android:textAppearanceSmall"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/different_login"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/login_form"
                android:layout_margin="2dp">

                <Button
                    android:id="@+id/fbbtn"
                    android:text="Facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/fbloginbtn"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/gplusbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@drawable/gplusbtn"
                    android:text="Google+"
                    android:textColor="#FFFFFF"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
